objects/GSM_Approval_Response__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve__c</fullName>
        <formula>If(ISBLANK(Response_Date__c), Today() - DATEVALUE(CreatedDate), Response_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Structure Request Form</label>
        <referenceTo>AIA_Group_Structure_Request_Form__c</referenceTo>
        <relationshipLabel>GSM Approval Responses</relationshipLabel>
        <relationshipName>GSM_Approval_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Process completed is unchecked then only considered for status on Approved by account</description>
        <label>Process completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <description>The day the response was submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The day the response was submitted.</inlineHelpText>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSM_Approval_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Custom object to handle custom approval process in GSM</description>
    <label>GSM Approval Response</label>
    <nameField>
        <displayFormat>GSAR-{0000}</displayFormat>
        <label>GSRF Approval Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSM Approval Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GAP001</fullName>
        <active>true</active>
        <description>If the response is Rejected then make sure they enter a reason in the Comments field.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; ISPICKVAL(Response__c, 'Reject') &amp;&amp; (ISNULL(Comments__c) || ISBLANK(Comments__c))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>GAP001 : Please enter a comment for the rejected response</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GAP002</fullName>
        <active>true</active>
        <description>Allow user to provide inputs only to respective approval Request</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; $User.Id  &lt;&gt;  User__r.Id &amp;&amp; NOT(ISNEW()) &amp;&amp; 
 $Profile.Name &lt;&gt; 'System Administrator'&amp;&amp;
Not(Group_Structure_Request_Form__r.ignore_gsa_validations__c )</errorConditionFormula>
        <errorMessage>GAP002 : You don't have access to modify this record</errorMessage>
    </validationRules>
</CustomObject>